--- a/Python_Flask/myproject/pybo/templates/base.html
+++ b/Python_Flask/myproject/pybo/templates/base.html
@@ -11,11 +11,26 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <title>Hello, pybo!</title>
 </head>
+
 <body>
+{% include "navbar.html" %}
+
 <!-- 기본 템플릿 안에 삽입될 내용 Start -->
 {% block content %}
 {% endblock %}
 <!-- 기본 템플릿 안에 삽입될 내용 End -->
+
+<!--jQuery JS-->
+<!--!주의!
+ bootstrap.min.js 는 jquery-3.4.1.min.js를 필요로 하므로
+ jquery-3.4.1.min.js를 먼저 적어주어야 한다.
+ 순서에 유의하도록 하자.
+-->
+<!-- jQuery JS 버전확인하여 작성하자 -->
+<script src="{{ url_for('static', filename='jquery-3.5.1.min.js') }}"></script>
+<!-- Bootstrap JS -->
+<script src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
+<!--jQuery JS-->
 </body>
 </html>
 <!-- ---------------------------------------------------------------------------------------- -->
